# poetry_tutorial

./: pyproject.toml
src/poetry_tutorial/: __init__.py  app.py  ohe.pkl  ridge.pkl  scaler.pkl
src/poetry_tutorial/templates/: features.html  home.html  result.html
