[project]
name = "poetry-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Rashid-Zaman",email = "rashidzamanbtech2023@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_tutorial", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
